--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -3,9 +3,9 @@
   <div><span>id: </span>{{hero.id}}</div>
   <div>
     <label>name:
-      <input [(ngModel)]="hero.name" placeholder="name"/>
+      <input [(ngModel)]="hero.name" placeholder="name" />
     </label>
   </div>
 </div>
 <button (click)="goBack()">Go back</button>
-<button (click)="save()">save</button>
+<button (click)="save()">Save</button>
