--- a/src/app/hero-search/hero-search.component.scss
+++ b/src/app/hero-search/hero-search.component.scss
@@ -9,24 +9,26 @@
   background-color: white;
   cursor: pointer;
   list-style-type: none;
+
+  &:hover {
+    background-color: #607D8B;
+  }
+
+  a {
+    color: #888;
+    display: block;
+    text-decoration: none;
+  }
+
+  a:hover {
+    color: white;
+  }
+
+  a:active {
+    color: white;
+  }
 }
 
-.search-result li:hover {
-  background-color: #607D8B;
-}
-
-.search-result li a {
-  color: #888;
-  display: block;
-  text-decoration: none;
-}
-
-.search-result li a:hover {
-  color: white;
-}
-.search-result li a:active {
-  color: white;
-}
 #search-box {
   width: 200px;
   height: 20px;
