--- a/src/app/heroes/heroes.component.scss
+++ b/src/app/heroes/heroes.component.scss
@@ -4,6 +4,7 @@
   list-style-type: none;
   padding: 0;
   width: 15em;
+
   li {
     cursor: pointer;
     position: relative;
@@ -13,26 +14,30 @@
     padding: .3em 0;
     height: 1.6em;
     border-radius: 4px;
+
     &:hover {
       color: #607D8B;
       background-color: #DDD;
       left: .1em;
     }
+
     &.selected {
       background-color: #CFD8DC;
       color: white;
+
       &:hover {
         background-color: #BBD8DC;
         color: white;
       }
     }
   }
+
   .badge {
     display: inline-block;
     font-size: small;
     color: white;
     padding: 0.8em 0.7em 0 0.7em;
-    background-color:#405061;
+    background-color: #405061;
     line-height: 1em;
     position: relative;
     left: -1px;
@@ -51,6 +56,7 @@ button {
   cursor: pointer;
   cursor: hand;
   font-family: Arial;
+  margin-left: 10px;
 }
 
 button:hover {
@@ -59,8 +65,13 @@ button:hover {
 
 button.delete {
   position: absolute;
-  left: 194px;
+  // left: 184px;
   // top: -32px;
+  right: 10px;
   background-color: gray !important;
   color: white;
+}
+
+a {
+  text-decoration: none;
 }
