--- a/src/app/messages/messages.component.scss
+++ b/src/app/messages/messages.component.scss
@@ -4,13 +4,18 @@ h2 {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: lighter;
 }
+
 body {
   margin: 2em;
 }
-body, input[text], button {
+
+body,
+input[text],
+button {
   color: crimson;
   font-family: Cambria, Georgia;
 }
+
 button {
   &.clear {
     font-family: Arial;
@@ -23,12 +28,14 @@ button {
     color: #333;
     margin-bottom: 12px;
   }
+
   &:hover {
-  background-color: #cfd8dc;
-  &:disabled {
-    background-color: #eee;
-    color: #aaa;
-    cursor: auto;
-  }
+    background-color: #cfd8dc;
+
+    &:disabled {
+      background-color: #eee;
+      color: #aaa;
+      cursor: auto;
+    }
   }
 }
